Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -541,6 +541,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 123,
+   "outputs": [],
+   "source": [
+    "X = df.drop('price',axis=1)\n",
+    "y = df['price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
