Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -589,6 +589,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>At first glance, a linear relationship between the price and the number of rooms can be clearly seen. We cannot say that there is a linear relationship with the same precision about the data points obtained from the scatter diagrams of the other properties of house prices."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
