Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -626,6 +626,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>When we look at the Local Regression curves, we can observe the trends of the data points. The lowess curve of the price and the number of rooms was not created because these two have a perfectly linear relationship. At first glance, the relationship between house prices and the measurement of the width, the floor and the age of the building does not seem linear. In addition, it can be seen that the polynomial relationship between the face measurement variable and the floor where the house is located and the age of the building is not of the same degree with the target variable."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
