Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -672,6 +672,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>While the relation of the target variable with the number of rooms is linear, its relation with the other properties of the houses is not linear. This is pretty obvious, especially for the m2 and floor variables."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
