Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -776,6 +776,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Now, let's set the model by determining the appropriate polynomial degrees for the features that have a polynomial relationship with the target variable."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
