Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -789,6 +789,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 176,
+   "outputs": [],
+   "source": [
+    "df_train = pd.concat([y_train,X_train],axis=1,sort=True)\n",
+    "\n",
+    "X1_train = df_train['rooms'].values.reshape(-1,1)\n",
+    "X2_train = df_train['m2'].values.reshape(-1,1)\n",
+    "X3_train = df_train['floor'].values.reshape(-1,1)\n",
+    "X4_train = df_train['age'].values.reshape(-1,1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
