Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -832,6 +832,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 178,
+   "outputs": [],
+   "source": [
+    "df_test = pd.concat([y_test,X_test],axis=1,sort=True)\n",
+    "\n",
+    "X1_test = df_test['rooms'].values.reshape(-1,1)\n",
+    "X2_test = df_test['m2'].values.reshape(-1,1)\n",
+    "X3_test = df_test['floor'].values.reshape(-1,1)\n",
+    "X4_test = df_test['age'].values.reshape(-1,1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
