--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -226,7 +226,7 @@
     "\n",
     "    if min_rmse > poly_rmse:\n",
     "        min_rmse = poly_rmse\n",
-    "        min_deg = deg"
+    "        min_deg = deg\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -851,9 +851,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 179,
+   "outputs": [],
+   "source": [
+    "rmses = []\n",
+    "degrees = np.arange(1,10)\n",
+    "min_rmse, min_deg = 1e10, 0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "for deg in degrees:\n",
+    "    poly_features = PolynomialFeatures(degree=deg,include_bias=False)\n",
+    "\n",
+    "    X_poly_train = poly_features.fit_transform(X_train)\n",
+    "\n",
+    "    # Linear Reg.\n",
+    "    poly_reg = LinearRegression().fit(X_poly_train,y_train)\n",
+    "\n",
+    "    # Comparison with test set\n",
+    "    X_poly_test = poly_features.fit_transform(X_test)\n",
+    "    poly_predict = poly_reg.predict(X_poly_test)\n",
+    "    poly_mse = mean_squared_error(y_test,poly_predict)\n",
+    "    poly_rmse = np.sqrt(mean_squared_error(y_test,poly_predict))\n",
+    "    rmses.append(poly_rmse)\n",
+    "\n",
+    "    if min_rmse > poly_rmse:\n",
+    "        min_rmse = poly_rmse\n",
+    "        min_deg = deg\n",
+    "\n",
+    "print(f'Best Model RMSE :{min_rmse} degree :{min_deg}')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
