Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -962,6 +962,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 195,
+   "outputs": [],
+   "source": [
+    "rmses = []\n",
+    "degrees = np.arange(1,10)\n",
+    "min_rmse, min_deg = 1e10, 0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
