Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -1235,6 +1235,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 206,
+   "outputs": [],
+   "source": [
+    "poly_features = PolynomialFeatures(degree=1)\n",
+    "X1_train = poly_features.fit_transform(X1_train)\n",
+    "X1_test = poly_features.fit_transform(X1_test)\n",
+    "\n",
+    "poly_features = PolynomialFeatures(degree=7)\n",
+    "X2_train = poly_features.fit_transform(X2_train)\n",
+    "X2_test = poly_features.fit_transform(X2_test)\n",
+    "\n",
+    "poly_features = PolynomialFeatures(degree=6)\n",
+    "X3_train = poly_features.fit_transform(X3_train)\n",
+    "X3_test = poly_features.fit_transform(X3_test)\n",
+    "\n",
+    "poly_features = PolynomialFeatures(degree=2)\n",
+    "X4_train = poly_features.fit_transform(X4_train)\n",
+    "X4_test = poly_features.fit_transform(X4_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
