Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -1263,6 +1263,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 207,
+   "outputs": [],
+   "source": [
+    "X_train1 = np.concatenate((X1_train,X2_train,X3_train,X4_train),axis=1)\n",
+    "X_test1 = np.concatenate((X1_test,X2_test,X3_test,X4_test),axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
