Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -1290,6 +1290,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 209,
+   "outputs": [],
+   "source": [
+    "X_train['int1'] = X_train['rooms'].mul(X_train['m2'])\n",
+    "X_train['int2'] = X_train['rooms'].mul(X_train['floor'])\n",
+    "X_train['int3'] = X_train['rooms'].mul(X_train['age'])\n",
+    "X_train['int4'] = X_train['m2'].mul(X_train['floor'])\n",
+    "X_train['int5'] = X_train['m2'].mul(X_train['age'])\n",
+    "X_train['int6'] = X_train['floor'].mul(X_train['age'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "outputs": [],
+   "source": [
+    "X_test['int1'] = X_test['rooms'].mul(X_test['m2'])\n",
+    "X_test['int1'] = X_test['rooms'].mul(X_test['floor'])\n",
+    "X_test['int1'] = X_test['rooms'].mul(X_test['age'])\n",
+    "X_test['int1'] = X_test['m2'].mul(X_test['floor'])\n",
+    "X_test['int1'] = X_test['m2'].mul(X_test['age'])\n",
+    "X_test['int1'] = X_test['floor'].mul(X_test['age'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
