Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -1309,15 +1309,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 213,
    "outputs": [],
    "source": [
     "X_test['int1'] = X_test['rooms'].mul(X_test['m2'])\n",
-    "X_test['int1'] = X_test['rooms'].mul(X_test['floor'])\n",
-    "X_test['int1'] = X_test['rooms'].mul(X_test['age'])\n",
-    "X_test['int1'] = X_test['m2'].mul(X_test['floor'])\n",
-    "X_test['int1'] = X_test['m2'].mul(X_test['age'])\n",
-    "X_test['int1'] = X_test['floor'].mul(X_test['age'])"
+    "X_test['int2'] = X_test['rooms'].mul(X_test['floor'])\n",
+    "X_test['int3'] = X_test['rooms'].mul(X_test['age'])\n",
+    "X_test['int4'] = X_test['m2'].mul(X_test['floor'])\n",
+    "X_test['int5'] = X_test['m2'].mul(X_test['age'])\n",
+    "X_test['int6'] = X_test['floor'].mul(X_test['age'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "outputs": [],
+   "source": [
+    "X_train2 = np.array(X_train[['int1','int2','int3','int4','int5','int6']])\n",
+    "\n",
+    "X_tes2 = np.array(X_test[['int1','int2','int3','int4','int5','int6']])"
    ],
    "metadata": {
     "collapsed": false,
