Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -1328,12 +1328,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 216,
    "outputs": [],
    "source": [
     "X_train2 = np.array(X_train[['int1','int2','int3','int4','int5','int6']])\n",
     "\n",
-    "X_tes2 = np.array(X_test[['int1','int2','int3','int4','int5','int6']])"
+    "X_test2 = np.array(X_test[['int1','int2','int3','int4','int5','int6']])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "outputs": [],
+   "source": [
+    "X_train1 = np.concatenate((X_train1, X_train2),axis=1)\n",
+    "X_test1 = np.concatenate((X_test1, X_test2),axis=1)"
    ],
    "metadata": {
     "collapsed": false,
