--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -1385,18 +1385,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 269,
    "outputs": [
     {
-     "data": {
-      "text/plain": "array([[1.000e+00, 1.000e+00, 1.000e+00, ..., 8.500e+01, 1.700e+03,\n        2.000e+01],\n       [1.000e+00, 1.000e+00, 1.000e+00, ..., 9.500e+01, 1.805e+03,\n        1.900e+01],\n       [1.000e+00, 1.000e+00, 1.000e+00, ..., 7.500e+01, 1.650e+03,\n        2.200e+01],\n       ...,\n       [1.000e+00, 3.000e+00, 1.000e+00, ..., 4.500e+02, 2.700e+02,\n        1.500e+01],\n       [1.000e+00, 3.000e+00, 1.000e+00, ..., 1.800e+02, 1.710e+03,\n        3.800e+01],\n       [1.000e+00, 3.000e+00, 1.000e+00, ..., 9.500e+01, 2.090e+03,\n        2.200e+01]])"
-     },
-     "execution_count": 268,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polynomial Reg Train R2 :0.8075964609487128\n",
+      "Polynomial Reg Test R2 :0.7578200785872634\n"
+     ]
     }
    ],
-   "source": [],
+   "source": [
+    "print(f'Polynomial Reg Train R2 :{poly_reg.score(X_train1,y_train)}')\n",
+    "print(f'Polynomial Reg Test R2 :{poly_reg.score(X_test1,y_test)}')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
