Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -1408,14 +1408,200 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Comparing training dataset predictions with actual values"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 268,
-   "outputs": [],
-   "source": [],
+   "execution_count": 271,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pred_price : 542.1904180595153  real_price : 475\n",
+      "pred_price : 669.020686788061  real_price : 475\n",
+      "pred_price : 532.7479705006466  real_price : 450\n",
+      "pred_price : 689.9639708135431  real_price : 450\n",
+      "pred_price : 685.0236237975081  real_price : 475\n",
+      "pred_price : 650.8048271429283  real_price : 475\n",
+      "pred_price : 558.6660362000924  real_price : 475\n",
+      "pred_price : 658.5126696823539  real_price : 475\n",
+      "pred_price : 545.7848340246027  real_price : 450\n",
+      "pred_price : 670.1966108909941  real_price : 475\n",
+      "pred_price : 869.834685123862  real_price : 475\n",
+      "pred_price : 538.6365693256479  real_price : 525\n",
+      "pred_price : 774.823158753746  real_price : 550\n",
+      "pred_price : 517.8264024684107  real_price : 575\n",
+      "pred_price : 565.8317669788222  real_price : 550\n",
+      "pred_price : 678.258792458398  real_price : 575\n",
+      "pred_price : 547.3225670993819  real_price : 500\n",
+      "pred_price : 688.5197131911908  real_price : 550\n",
+      "pred_price : 657.8737710173986  real_price : 525\n",
+      "pred_price : 495.9785430794476  real_price : 500\n",
+      "pred_price : 561.7800971344226  real_price : 550\n",
+      "pred_price : 692.8125776568817  real_price : 500\n",
+      "pred_price : 705.5187370722673  real_price : 550\n",
+      "pred_price : 634.9118028233755  real_price : 550\n",
+      "pred_price : 649.2138942561945  real_price : 575\n",
+      "pred_price : 655.2243963525801  real_price : 500\n",
+      "pred_price : 471.40406161657336  real_price : 500\n",
+      "pred_price : 527.2238570264675  real_price : 525\n",
+      "pred_price : 626.9915924002456  real_price : 525\n",
+      "pred_price : 699.0877017650822  real_price : 575\n",
+      "pred_price : 651.1765038766392  real_price : 500\n",
+      "pred_price : 497.975951842442  real_price : 500\n",
+      "pred_price : 618.5998197934135  real_price : 575\n",
+      "pred_price : 487.46642668613674  real_price : 500\n",
+      "pred_price : 875.3076598570573  real_price : 575\n",
+      "pred_price : 639.8277058702737  real_price : 525\n",
+      "pred_price : 676.3322300877666  real_price : 500\n",
+      "pred_price : 479.05850211407085  real_price : 500\n",
+      "pred_price : 621.8934872401463  real_price : 625\n",
+      "pred_price : 678.1237551707367  real_price : 500\n",
+      "pred_price : 493.7231772177514  real_price : 600\n",
+      "pred_price : 491.61325160819285  real_price : 625\n",
+      "pred_price : 663.3219845953867  real_price : 625\n",
+      "pred_price : 482.6703528520851  real_price : 600\n",
+      "pred_price : 555.5421862903244  real_price : 550\n",
+      "pred_price : 648.8614166971005  real_price : 575\n",
+      "pred_price : 664.1016160973016  real_price : 500\n",
+      "pred_price : 656.4091673735005  real_price : 525\n",
+      "pred_price : 653.9726691455475  real_price : 625\n",
+      "pred_price : 486.19271696053727  real_price : 525\n",
+      "pred_price : 681.6643629420727  real_price : 550\n",
+      "pred_price : 682.2099060522308  real_price : 600\n",
+      "pred_price : 666.8030167778528  real_price : 575\n",
+      "pred_price : 488.80747589960845  real_price : 575\n",
+      "pred_price : 683.9173841027408  real_price : 625\n",
+      "pred_price : 779.5203173888589  real_price : 550\n",
+      "pred_price : 656.4367318212174  real_price : 500\n",
+      "pred_price : 697.0600993786869  real_price : 550\n",
+      "pred_price : 670.2405710862043  real_price : 700\n",
+      "pred_price : 529.0319348439556  real_price : 675\n",
+      "pred_price : 663.5556910619783  real_price : 625\n",
+      "pred_price : 559.8289229418446  real_price : 625\n",
+      "pred_price : 552.2522014337704  real_price : 650\n",
+      "pred_price : 754.8410062768493  real_price : 675\n",
+      "pred_price : 770.4121154852331  real_price : 700\n",
+      "pred_price : 511.00493477904126  real_price : 725\n",
+      "pred_price : 491.5090323159824  real_price : 700\n",
+      "pred_price : 713.3651169533663  real_price : 675\n",
+      "pred_price : 655.9901780311887  real_price : 650\n",
+      "pred_price : 661.4105189020887  real_price : 725\n",
+      "pred_price : 675.7662638213045  real_price : 625\n",
+      "pred_price : 530.341326159982  real_price : 675\n",
+      "pred_price : 651.3230720985706  real_price : 675\n",
+      "pred_price : 652.6170903729547  real_price : 725\n",
+      "pred_price : 642.1808111305621  real_price : 675\n",
+      "pred_price : 866.2846110794056  real_price : 600\n",
+      "pred_price : 762.7045877697204  real_price : 650\n",
+      "pred_price : 515.7195778771642  real_price : 600\n",
+      "pred_price : 673.5895264666837  real_price : 675\n",
+      "pred_price : 766.223063612248  real_price : 650\n",
+      "pred_price : 767.2401740832796  real_price : 650\n",
+      "pred_price : 682.962609245253  real_price : 625\n",
+      "pred_price : 686.7680791878814  real_price : 600\n",
+      "pred_price : 512.1169593928502  real_price : 625\n",
+      "pred_price : 532.9659798699907  real_price : 675\n",
+      "pred_price : 790.2937046971932  real_price : 650\n",
+      "pred_price : 762.0469357826408  real_price : 675\n",
+      "pred_price : 682.6370858203157  real_price : 725\n",
+      "pred_price : 838.2802626164051  real_price : 600\n",
+      "pred_price : 630.2438058757474  real_price : 700\n",
+      "pred_price : 490.8581396462108  real_price : 725\n",
+      "pred_price : 648.7874628288231  real_price : 700\n",
+      "pred_price : 519.8461655907489  real_price : 625\n",
+      "pred_price : 716.8394508580644  real_price : 675\n",
+      "pred_price : 700.7186333156573  real_price : 600\n",
+      "pred_price : 750.6314421022984  real_price : 625\n",
+      "pred_price : 561.8369334409002  real_price : 650\n",
+      "pred_price : 662.0185323658046  real_price : 625\n",
+      "pred_price : 546.3203837078112  real_price : 675\n",
+      "pred_price : 495.5629624387151  real_price : 600\n",
+      "pred_price : 666.6509055657665  real_price : 650\n",
+      "pred_price : 686.6718878456126  real_price : 675\n",
+      "pred_price : 659.2752818577504  real_price : 650\n",
+      "pred_price : 733.2598742632621  real_price : 600\n",
+      "pred_price : 751.5465972134774  real_price : 675\n",
+      "pred_price : 635.2316794201364  real_price : 675\n",
+      "pred_price : 485.39248051784705  real_price : 625\n",
+      "pred_price : 510.3157442236155  real_price : 650\n",
+      "pred_price : 682.6265414858138  real_price : 600\n",
+      "pred_price : 689.4310298145905  real_price : 600\n",
+      "pred_price : 668.8195794568459  real_price : 650\n",
+      "pred_price : 500.50108416044566  real_price : 675\n",
+      "pred_price : 683.0206388807568  real_price : 650\n",
+      "pred_price : 765.5570741961532  real_price : 675\n",
+      "pred_price : 678.2384122132247  real_price : 650\n",
+      "pred_price : 688.1493787902294  real_price : 600\n",
+      "pred_price : 745.3910217669912  real_price : 600\n",
+      "pred_price : 692.5951590268672  real_price : 625\n",
+      "pred_price : 595.0208534937414  real_price : 675\n",
+      "pred_price : 678.3718202491949  real_price : 675\n",
+      "pred_price : 595.1911637805682  real_price : 600\n",
+      "pred_price : 891.7468049579624  real_price : 650\n",
+      "pred_price : 689.2761532874177  real_price : 650\n",
+      "pred_price : 531.4271214929653  real_price : 675\n",
+      "pred_price : 674.5221569882818  real_price : 650\n",
+      "pred_price : 537.832011886618  real_price : 600\n",
+      "pred_price : 546.3308455981972  real_price : 675\n",
+      "pred_price : 721.9156313710959  real_price : 600\n",
+      "pred_price : 918.6039273672508  real_price : 650\n",
+      "pred_price : 664.5696302356158  real_price : 600\n",
+      "pred_price : 574.9707423610311  real_price : 675\n",
+      "pred_price : 713.3617318591063  real_price : 625\n",
+      "pred_price : 751.5580382462543  real_price : 650\n",
+      "pred_price : 537.5923130939631  real_price : 625\n",
+      "pred_price : 577.7193127464528  real_price : 675\n",
+      "pred_price : 728.0879430193239  real_price : 675\n",
+      "pred_price : 721.3855989315856  real_price : 675\n",
+      "pred_price : 690.8178054187523  real_price : 650\n",
+      "pred_price : 660.6172374803394  real_price : 675\n",
+      "pred_price : 651.0146479201943  real_price : 625\n",
+      "pred_price : 643.4409863641926  real_price : 625\n",
+      "pred_price : 678.5254072585489  real_price : 650\n",
+      "pred_price : 671.5464383332259  real_price : 650\n",
+      "pred_price : 688.2933895058162  real_price : 725\n",
+      "pred_price : 943.0466733676843  real_price : 750\n",
+      "pred_price : 518.4877205582819  real_price : 750\n",
+      "pred_price : 683.2244219222124  real_price : 700\n",
+      "pred_price : 685.3457652320579  real_price : 725\n",
+      "pred_price : 535.3300842598914  real_price : 725\n",
+      "pred_price : 691.041031686815  real_price : 700\n",
+      "pred_price : 690.5075873821555  real_price : 775\n",
+      "pred_price : 651.8585630356905  real_price : 750\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_train = poly_reg.predict(X_train1)\n",
+    "\n",
+    "for i, prediction in enumerate(y_pred_train):\n",
+    "    print(f'pred_price : {prediction}  real_price : {y[i]}')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
