Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -1609,6 +1609,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 272,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pred_price : 696.6052770299833  real_price : 475\n",
+      "pred_price : 667.1789126195239  real_price : 475\n",
+      "pred_price : 769.9294410409906  real_price : 450\n",
+      "pred_price : 663.8415811153594  real_price : 450\n",
+      "pred_price : 684.6118655105341  real_price : 475\n",
+      "pred_price : 509.2362062612027  real_price : 475\n",
+      "pred_price : 503.0927074493228  real_price : 475\n",
+      "pred_price : 505.26052719254074  real_price : 475\n",
+      "pred_price : 631.3544574664178  real_price : 450\n",
+      "pred_price : 668.2969459042655  real_price : 475\n",
+      "pred_price : 654.2992520374831  real_price : 475\n",
+      "pred_price : 724.9418296581356  real_price : 525\n",
+      "pred_price : 510.5270188799699  real_price : 550\n",
+      "pred_price : 733.3407037463406  real_price : 575\n",
+      "pred_price : 695.685994103082  real_price : 550\n",
+      "pred_price : 817.2189116386729  real_price : 575\n",
+      "pred_price : 722.2182955982283  real_price : 500\n",
+      "pred_price : 673.2606390391014  real_price : 550\n",
+      "pred_price : 736.8336332692492  real_price : 525\n",
+      "pred_price : 504.37431306589895  real_price : 500\n",
+      "pred_price : 535.7511287022538  real_price : 550\n",
+      "pred_price : 520.7657244554288  real_price : 500\n",
+      "pred_price : 660.4806369533547  real_price : 550\n",
+      "pred_price : 649.2119200917517  real_price : 550\n",
+      "pred_price : 665.7009528443235  real_price : 575\n",
+      "pred_price : 642.3159711420161  real_price : 500\n",
+      "pred_price : 702.5071558789281  real_price : 500\n",
+      "pred_price : 509.1227290151877  real_price : 525\n",
+      "pred_price : 545.5641888121285  real_price : 525\n",
+      "pred_price : 675.9499587016984  real_price : 575\n",
+      "pred_price : 762.5441739987294  real_price : 500\n",
+      "pred_price : 676.8938535545316  real_price : 500\n",
+      "pred_price : 517.5502211620372  real_price : 575\n",
+      "pred_price : 716.8130265471267  real_price : 500\n",
+      "pred_price : 690.7369819542513  real_price : 575\n",
+      "pred_price : 751.8350455546318  real_price : 525\n",
+      "pred_price : 706.6289132877358  real_price : 500\n",
+      "pred_price : 849.6962857022376  real_price : 500\n",
+      "pred_price : 886.981408671047  real_price : 625\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_test = poly_reg.predict(X_test1)\n",
+    "\n",
+    "for i, prediction in enumerate(y_pred_test):\n",
+    "    print(f'pred_price : {prediction}  real_price : {y[i]}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
